Fixed the favicon, as it was not showing.

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -10,6 +10,7 @@
     top: 0px;
     right: 0px;
     left: 0px;
+    background-color: var(--background-color);
 }
 
 .links {
